[package]
name = "xPass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"cursive" = "^0.17.0"
"serde" = { version = "1.0", features = ["derive"] }
"magic-crypt" = "^3.1.9"
"confy" = "^0.4.0"
"rand" = "^0.8.4"
"scrypt" = "^0.8.1"
"clipboard" = "^0.5.0"